I will change f single quotes logic to check for syntax-
error begin by line 67
file : tokenizer_sequel.c
STATUS  : ba9a lfikra tmma ^^^^^^

change in single quotes but still have chi blan 
*---> TRUE CHANGE :
    in true_case_quote function line : 114 add second condition
7itach I changed in logic selection of tokens so kay3tini wa7d 
token b state o type machi IN_SQUOT || IN_DQUOT return (new = NULL)
so token = NULL whada mablanch.

Currently :
    change on single quote fcts for norminette; test too;
*----> Status ^^^^^
    CHANGES ACCEPTED;
NEXT:
    change in Dquote for norminette;
*---> Status ^^^^
    Accepted kan wa7d lblan khfif f return mekhtalf bin mnin kanl9a chi ENV_VAR olla 
    mnin matatkonch
Begin : Today : 26 - 12:13
Goals : syntax error caused by all type of redirection
*-----> CHECKED <<<
    Add in line 45 of ysntax error but norminette error.
*----->
True changes : 
    reimplementation of redirection check case like :"ls >| wc -l";

NOW_ITS TIME FOR pipe syntaxe error :
PIPE:
	- left: [WSPACE] (STRING)
	- right: [WSPACE](STRING | REDIRECT)
fih Maydar :
        STOP :23:54;
    {
        creat pipe look for behind;
        forward THEN if some on o f them EQUAL null return (ERROR_EXIT)
        si non consulter autre condition;
    }
BEGIN : 13 : 06;
STOP : 22 : 43: Had nhar bedat madert fih ta9elwa ;
BEGIN after one day : 12 : 03 29/09:

==>|when I get status I should replace it by it's valu|
find error and handle it : echo "$" should be echo A_SPACE WORD
so I add && command[j + 1] != '\"';


****---------->

/***************************************************************
/***************************************************************
                    |TO_CHECK MNBE3D|
                    -----------------
LEAK : if the variable don't exist in env ->I return duped("");
but chi blan tma;
ft_strndup don't alloc when to_dup = '\0';
GO TO SLEEP  00:00
/***************************************************************/