@@ -6,7 +6,7 @@
 #    By: abait-ta <abait-ta@student.1337.ma >       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/09/02 23:58:10 by abait-ta          #+#    #+#              #
-#    Updated: 2023/10/01 20:26:04 by abait-ta         ###   ########.fr        #
+#    Updated: 2023/10/02 20:10:02 by abait-ta         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ SRC = ./Parsing/Lexical_analysis/lexical_analysis.c ./Parsing/Lexical_analysis/L
 Global_main.c ./Parsing/Lexical_analysis/cleaner_end.c ./Parsing/Lexical_analysis/cleaner_sequel.c ./Parsing/Lexical_analysis/token_cleaner.c \
 ./Parsing/Syntax_analysis/syntax_checker.c ./Parsing/Environnement/env_expansion.c ./Parsing/Environnement/env_builder.c \
 ./Parsing/Syntax_analysis/syntax_outfunction.c ./Parsing/Lexical_analysis/.show_tokens.c ./Parsing/Lexical_analysis/out_function.c \
-./Parsing/Data_sender/List_management.c
+./Parsing/Data_sender/List_management.c ./Parsing/Data_sender/recognizer.c
 
 
 Header = ./Header/Parsing.h
