@@ -1,348 +1,0 @@
-{
-  "tldrawFileFormatVersion": 1,
-  "schema": {
-    "schemaVersion": 1,
-    "storeVersion": 4,
-    "recordVersions": {
-      "asset": {
-        "version": 1,
-        "subTypeKey": "type",
-        "subTypeVersions": {
-          "image": 2,
-          "video": 2,
-          "bookmark": 0
-        }
-      },
-      "camera": {
-        "version": 1
-      },
-      "document": {
-        "version": 2
-      },
-      "instance": {
-        "version": 17
-      },
-      "instance_page_state": {
-        "version": 3
-      },
-      "page": {
-        "version": 1
-      },
-      "shape": {
-        "version": 3,
-        "subTypeKey": "type",
-        "subTypeVersions": {
-          "group": 0,
-          "embed": 4,
-          "bookmark": 1,
-          "image": 2,
-          "text": 1,
-          "draw": 1,
-          "geo": 7,
-          "line": 0,
-          "note": 4,
-          "frame": 0,
-          "arrow": 1,
-          "highlight": 0,
-          "video": 1
-        }
-      },
-      "instance_presence": {
-        "version": 4
-      },
-      "pointer": {
-        "version": 1
-      }
-    }
-  },
-  "records": [
-    {
-      "gridSize": 10,
-      "name": "",
-      "meta": {},
-      "id": "document:document",
-      "typeName": "document"
-    },
-    {
-      "id": "pointer:pointer",
-      "typeName": "pointer",
-      "x": 691,
-      "y": 163,
-      "lastActivityTimestamp": 1695301422013,
-      "meta": {}
-    },
-    {
-      "meta": {},
-      "id": "page:FqElShQA1O-8l3LgnLKwz",
-      "name": "Page 1",
-      "index": "a1",
-      "typeName": "page"
-    },
-    {
-      "x": 0,
-      "y": 0,
-      "z": 1,
-      "meta": {},
-      "id": "camera:page:FqElShQA1O-8l3LgnLKwz",
-      "typeName": "camera"
-    },
-    {
-      "editingId": "shape:6EL0ttLCyrdgCR-pQ84b-",
-      "croppingId": null,
-      "selectedIds": [
-        "shape:6EL0ttLCyrdgCR-pQ84b-"
-      ],
-      "hoveredId": null,
-      "erasingIds": [],
-      "hintingIds": [],
-      "focusLayerId": null,
-      "meta": {},
-      "id": "instance_page_state:page:FqElShQA1O-8l3LgnLKwz",
-      "pageId": "page:FqElShQA1O-8l3LgnLKwz",
-      "typeName": "instance_page_state"
-    },
-    {
-      "followingUserId": null,
-      "opacityForNextShape": 1,
-      "stylesForNextShape": {
-        "tldraw:geo": "rectangle",
-        "tldraw:color": "orange"
-      },
-      "brush": null,
-      "scribble": null,
-      "cursor": {
-        "type": "default",
-        "color": "white",
-        "rotation": 0
-      },
-      "isFocusMode": false,
-      "exportBackground": true,
-      "isDebugMode": false,
-      "isToolLocked": false,
-      "screenBounds": {
-        "x": 0,
-        "y": 0,
-        "w": 1542,
-        "h": 725
-      },
-      "zoomBrush": null,
-      "isGridMode": false,
-      "isPenMode": false,
-      "chatMessage": "",
-      "isChatting": false,
-      "highlightedUserIds": [],
-      "meta": {},
-      "id": "instance:instance",
-      "currentPageId": "page:FqElShQA1O-8l3LgnLKwz",
-      "typeName": "instance"
-    },
-    {
-      "x": 60,
-      "y": 100,
-      "rotation": 0,
-      "isLocked": false,
-      "opacity": 1,
-      "meta": {},
-      "id": "shape:Wgnr2WLnXdGwLestmfcsG",
-      "type": "geo",
-      "props": {
-        "w": 207.00000000000003,
-        "h": 423,
-        "geo": "rectangle",
-        "color": "orange",
-        "labelColor": "black",
-        "fill": "none",
-        "dash": "draw",
-        "size": "m",
-        "font": "draw",
-        "text": "",
-        "align": "middle",
-        "verticalAlign": "middle",
-        "growY": 0,
-        "url": ""
-      },
-      "parentId": "page:FqElShQA1O-8l3LgnLKwz",
-      "index": "a1",
-      "typeName": "shape"
-    },
-    {
-      "x": 262,
-      "y": 5,
-      "rotation": 0,
-      "isLocked": false,
-      "opacity": 1,
-      "meta": {},
-      "id": "shape:QGjXUYhQPlH6upxLJryA-",
-      "type": "geo",
-      "props": {
-        "w": 221,
-        "h": 76,
-        "geo": "rectangle",
-        "color": "orange",
-        "labelColor": "black",
-        "fill": "none",
-        "dash": "draw",
-        "size": "m",
-        "font": "draw",
-        "text": "",
-        "align": "middle",
-        "verticalAlign": "middle",
-        "growY": 0,
-        "url": ""
-      },
-      "parentId": "page:FqElShQA1O-8l3LgnLKwz",
-      "index": "a2",
-      "typeName": "shape"
-    },
-    {
-      "x": 264,
-      "y": 9,
-      "rotation": 0,
-      "isLocked": false,
-      "opacity": 1,
-      "meta": {},
-      "id": "shape:XOtNDHCRorElRCrqVSC-8",
-      "type": "text",
-      "props": {
-        "color": "orange",
-        "size": "m",
-        "w": 219,
-        "text": "SYNTAXE_ERR",
-        "font": "draw",
-        "align": "middle",
-        "autoSize": false,
-        "scale": 1
-      },
-      "parentId": "page:FqElShQA1O-8l3LgnLKwz",
-      "index": "a3",
-      "typeName": "shape"
-    },
-    {
-      "x": 65,
-      "y": 106,
-      "rotation": 0,
-      "isLocked": false,
-      "opacity": 1,
-      "meta": {},
-      "id": "shape:rkzTRhbIV3623nhRqrlSh",
-      "type": "text",
-      "props": {
-        "color": "orange",
-        "size": "m",
-        "w": 194,
-        "text": "Quotes :\ncheck if quote\nis closed if there is content after it but if not there still problem\n",
-        "font": "draw",
-        "align": "middle",
-        "autoSize": false,
-        "scale": 1
-      },
-      "parentId": "page:FqElShQA1O-8l3LgnLKwz",
-      "index": "a4",
-      "typeName": "shape"
-    },
-    {
-      "x": 291,
-      "y": 103,
-      "rotation": 0,
-      "isLocked": false,
-      "opacity": 1,
-      "meta": {},
-      "id": "shape:BJXK1SYVjtOresEq9hnlv",
-      "type": "geo",
-      "props": {
-        "w": 205,
-        "h": 423,
-        "geo": "rectangle",
-        "color": "orange",
-        "labelColor": "black",
-        "fill": "none",
-        "dash": "draw",
-        "size": "m",
-        "font": "draw",
-        "text": "",
-        "align": "middle",
-        "verticalAlign": "middle",
-        "growY": 0,
-        "url": ""
-      },
-      "parentId": "page:FqElShQA1O-8l3LgnLKwz",
-      "index": "a5",
-      "typeName": "shape"
-    },
-    {
-      "x": 294,
-      "y": 107,
-      "rotation": 0,
-      "isLocked": false,
-      "opacity": 1,
-      "meta": {},
-      "id": "shape:PQAItjIGvatAVVPt_lvyV",
-      "type": "text",
-      "props": {
-        "color": "orange",
-        "size": "m",
-        "w": 200,
-        "text": "redirection:\nif there is more than two of : in_red or out_Red\nis should stop\n",
-        "font": "draw",
-        "align": "middle",
-        "autoSize": false,
-        "scale": 1
-      },
-      "parentId": "page:FqElShQA1O-8l3LgnLKwz",
-      "index": "a6",
-      "typeName": "shape"
-    },
-    {
-      "x": 512,
-      "y": 104,
-      "rotation": 0,
-      "isLocked": false,
-      "opacity": 1,
-      "meta": {},
-      "id": "shape:WfIAJ7K_C5GKuwmD8-G2M",
-      "type": "geo",
-      "props": {
-        "w": 203,
-        "h": 423,
-        "geo": "rectangle",
-        "color": "orange",
-        "labelColor": "black",
-        "fill": "none",
-        "dash": "draw",
-        "size": "m",
-        "font": "draw",
-        "text": "",
-        "align": "middle",
-        "verticalAlign": "middle",
-        "growY": 0,
-        "url": ""
-      },
-      "parentId": "page:FqElShQA1O-8l3LgnLKwz",
-      "index": "a7",
-      "typeName": "shape"
-    },
-    {
-      "x": 516,
-      "y": 109,
-      "rotation": 0,
-      "isLocked": false,
-      "opacity": 1,
-      "meta": {},
-      "id": "shape:6EL0ttLCyrdgCR-pQ84b-",
-      "type": "text",
-      "props": {
-        "color": "orange",
-        "size": "m",
-        "w": 194,
-        "text": "PIPE :\ncheck the position of PIPE :\n*begin:\n*end\ndouble",
-        "font": "draw",
-        "align": "middle",
-        "autoSize": false,
-        "scale": 1
-      },
-      "parentId": "page:FqElShQA1O-8l3LgnLKwz",
-      "index": "a8",
-      "typeName": "shape"
-    }
-  ]
-}
